--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,7 +6,7 @@
     >
 <TextView  
     android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
+    android:layout_height="fill_parent" 
     android:text="@string/hello"
-    />
+    android:id="@+id/textView"/>
 </LinearLayout>
