--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,29 +4,39 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-	<LinearLayout android:id="@+id/LinearLayout01" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
-		<ImageButton android:id="@+id/moreButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_more"></ImageButton>
 		<!-- 
+	<LinearLayout android:id="@+id/LinearLayout01" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
 		<Button android:text="Play" android:id="@+id/playButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 		<Button android:text="Stop" android:id="@+id/stopButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 		<Button android:text="List" android:id="@+id/listButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-		 -->	
 	</LinearLayout>
+		 -->	
 	<TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
 		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
-			<TextView android:text="Title:" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="10sp" android:textStyle="bold"></TextView>
-			<TextView android:text="The Good Song" android:id="@+id/titleText" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="Title:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="The Good Song" android:id="@+id/titleText" android:layout_width="wrap_content" android:textSize="30sp" android:layout_height="wrap_content"></TextView>
 		</TableRow>
 		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
-			<TextView android:text="Author:" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="10sp"></TextView>
-			<TextView android:text="DJ Unknown" android:id="@+id/authorText" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="Author:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="DJ Unknown" android:id="@+id/authorText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="30sp"></TextView>
 		</TableRow>
 	</TableLayout>
-	<SurfaceView android:id="@+id/surfaceView" android:layout_width="fill_parent" android:layout_height="fill_parent"></SurfaceView>
 	<!-- 
+	<SurfaceView android:id="@+id/surfaceView" android:layout_width="fill_parent" android:layout_height="wrap_content"></SurfaceView>
 	<MediaController android:id="@+id/mediaController" android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="visible">
 	</MediaController>
 	<FrameLayout android:id="@+id/FrameLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent">
 	</FrameLayout>
 	 -->
+<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
+<SeekBar android:id="@+id/seekBar" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center"/>
+<TextView android:text="00:00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lengthView" android:typeface="monospace" android:textSize="16sp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center"></TextView>
+</LinearLayout>
+<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
+<ImageButton android:id="@+id/moreButton" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_menu_more"/>
+<ImageButton android:id="@+id/prevButton" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_media_previous"/>
+<ImageButton android:id="@+id/pauseButton" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_media_pause"/>
+<ImageButton android:id="@+id/nextButton" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_media_next"/>
+</LinearLayout>
+<TextView android:text="00:00" android:id="@+id/posTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="40sp" android:typeface="monospace" android:textColor="#00ff00"></TextView>
 </LinearLayout>
