--- a/res/layout/playlist.xml
+++ b/res/layout/playlist.xml
@@ -2,7 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     >
-<ListView android:id="@+id/PlayListView" android:layout_width="wrap_content" android:layout_height="wrap_content"></ListView>
+<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
+<ImageButton android:src="@android:drawable/ic_menu_upload_you_tube" android:id="@+id/playButton" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"/>
+<ImageButton android:src="@android:drawable/ic_menu_add" android:id="@+id/addButton" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"/>
+<ImageButton android:src="@android:drawable/ic_menu_close_clear_cancel" android:id="@+id/delButton" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent" android:baselineAlignBottom="true"/>
+<ImageButton android:src="@android:drawable/ic_menu_save" android:id="@+id/saveButton" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="fill_parent"/>
+<ImageButton android:src="@android:drawable/ic_menu_info_details" android:id="@+id/infoButton" android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="wrap_content"/>
+</LinearLayout>
+<ListView android:id="@+id/playListView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:choiceMode="multipleChoice"></ListView>
 </LinearLayout>
