--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,27 +9,32 @@
 		<Button android:text="Play" android:id="@+id/playButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 		<Button android:text="Stop" android:id="@+id/stopButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 		<Button android:text="List" android:id="@+id/listButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-	</LinearLayout>
+			<TextView android:text="Title:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<TextView android:text="Author:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	</LinearLayout> 
+<ImageButton android:id="@+id/moreButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_more"/>
 		 -->	
 	<TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
 		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
-			<TextView android:text="Title:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-			<TextView android:text="The Good Song" android:id="@+id/titleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:paddingLeft="8sp"></TextView>
+		<ImageView android:src="@drawable/ic_mp_song_playback"/>
+		<TextView android:text="The Good Song" android:id="@+id/titleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:paddingLeft="8sp"></TextView>
 		</TableRow>
 		<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
-			<TextView android:text="Author:" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+			<ImageView android:src="@drawable/ic_mp_artist_playback"/>
 			<TextView android:text="DJ Unknown" android:id="@+id/authorText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:paddingLeft="8sp"></TextView>
 		</TableRow>
 	</TableLayout>
-<TextView android:text="00:00" android:id="@+id/posTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="40sp" android:typeface="monospace" android:textColor="#00ff00"></TextView>
+<TextView android:text="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/songsView" android:typeface="monospace" android:textSize="20sp" android:textStyle="bold" android:textColor="#ffff00" android:gravity="center" android:paddingLeft="4sp"/>
+
 	<!-- 
+<TextView android:text="00:00" android:id="@+id/posTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="40sp" android:typeface="monospace" android:textColor="#00ff00"></TextView>
+
 	<SurfaceView android:id="@+id/surfaceView" android:layout_width="fill_parent" android:layout_height="wrap_content"></SurfaceView>
 	<MediaController android:id="@+id/mediaController" android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="visible">
 	</MediaController>
 
 	<FrameLayout android:id="@+id/FrameLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent">
 	</FrameLayout>
-	 -->
 <LinearLayout android:layout_margin="6sp" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
 <SeekBar android:id="@+id/seekSongBar" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center"/>
 <TextView android:text="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/songsView" android:typeface="monospace" android:textSize="20sp" android:textStyle="bold" android:textColor="#ffff00" android:gravity="center" android:paddingLeft="4sp"></TextView>
@@ -44,4 +49,72 @@
 <ImageButton android:id="@+id/pauseButton" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_media_pause"/>
 <ImageButton android:id="@+id/nextButton" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@android:drawable/ic_media_next"/>
 </LinearLayout>
+	 -->
+    <View 
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:background="#ffffffff" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#ff5a5a5a"
+        android:paddingTop="1px"
+        android:paddingBottom="4px"
+        android:orientation="horizontal">
+
+        <TextView android:id="@+id/currenttime"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:shadowColor="#ff000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="3"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:layout_width="0dip"
+            android:paddingLeft="5px"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="1px"
+            android:layout_marginBottom="2px"
+            android:gravity="center">
+            <ImageButton android:id="@+id/prevButton" style="@android:style/MediaButton.Previous" />
+            <ImageButton android:id="@+id/pauseButton" style="@android:style/MediaButton.Play" />
+            <ImageButton android:id="@+id/nextButton" style="@android:style/MediaButton.Next" />
+
+        </LinearLayout>
+
+        <TextView android:id="@+id/totaltime"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:shadowColor="#ff000000"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="3"
+            android:gravity="right"
+            android:paddingRight="5px"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <SeekBar android:id="@+id/seekBar"
+        android:background="#ff5a5a5a"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="36px"
+        android:paddingLeft="5px"
+        android:paddingRight="5px"
+        android:paddingBottom="4px" />
+
 </LinearLayout>
