--- a/res/layout/songlist_header.xml
+++ b/res/layout/songlist_header.xml
@@ -4,6 +4,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="#ff0000" android:textColor="#ffffff" android:textSize="32dp"/>
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#808080" android:textSize="24dp"/>
+<TextView android:layout_width="fill_parent" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:background="#ff0000" android:textColor="#ffffff" android:textSize="12dp"/>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000" android:textSize="18dp"/>
 </LinearLayout>
