--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -1,27 +1,43 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
-    android:background="#a0a0a0" >
-<com.ssb.droidsound.AsciiTextView android:text="Name" android:textSize="10px" android:textColor="#ffffff"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_margin="4px" 
-	android:shadowColor="#ff000000" android:shadowDx="4" android:shadowDy="4"/>
-<com.ssb.droidsound.AsciiTextView android:id="@+id/title_text" android:textSize="20px" android:textColor="#000000"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_margin="4px" />
-<com.ssb.droidsound.AsciiTextView android:text="Composer" android:textSize="10px" android:textColor="#ffffff"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_margin="4px"
-	android:shadowColor="#ff000000" />
-<com.ssb.droidsound.AsciiTextView android:id="@+id/composer_text" android:textColor="#000000" android:textSize="20px"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_margin="4px" />
-<com.ssb.droidsound.AsciiTextView android:id="@+id/seconds_text" android:textSize="20px" android:textColor="#00ff00"
- 	android:text="00:00 [01/01]" android:background="#000000" android:padding="4px"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_margin="4px" />
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
-    android:layout_width="fill_parent" android:layout_height="wrap_content" >
-<ImageButton android:id="@+id/back_button" android:background="@drawable/mg_skip_back" android:layout_width="40dp" android:layout_height="40dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/sub_back_button" android:background="@drawable/mg_back2" android:layout_width="40dp" android:layout_height="40dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/play_button" android:background="@drawable/mg_forward" android:layout_width="40dp" android:layout_height="40dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/sub_fwd_button" android:background="@drawable/mg_forward2" android:layout_width="40dp" android:layout_height="40dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/fwd_button" android:background="@drawable/mg_skip_forward" android:layout_width="40dp" android:layout_height="40dp" android:scaleType="fitCenter" />
-</LinearLayout>
-<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:cacheColorHint="#a0a0a0" 
- android:layout_width="fill_parent" android:layout_height="fill_parent" />
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
+	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#a0a0a0" >
+
+<FrameLayout 
+    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+    android:background="#a0a0a0"
+    android:id="@+id/info_display"
+    android:layout_alignParentTop="true" >
+<include layout="@layout/info_display" />
+</FrameLayout>
+
+<FrameLayout 
+    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+    android:background="#a0a0a0"  android:layout_centerHorizontal="true"
+    android:id="@+id/controls" android:layout_below="@id/info_display">
+<include layout="@layout/controls" />
+</FrameLayout>
+
+<SlidingDrawer
+     android:id="@+id/drawer"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent"
+     android:layout_below="@id/info_display"
+     android:bottomOffset="22dip"
+     android:topOffset="-22dip"
+
+     android:handle="@+id/handle"
+     android:content="@+id/play_list">
+
+     <ImageView
+         android:id="@id/handle"
+         android:layout_width="88dip"
+         android:layout_height="44dip"
+         android:src="@drawable/remove" />
+
+	<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:background="#ff5050a0"
+	 android:cacheColorHint="#ff5050a0" 
+	 android:layout_width="fill_parent" android:layout_height="fill_parent" />
+
+</SlidingDrawer>
+
+</RelativeLayout>
+
