--- a/res/layout/player2.xml
+++ b/res/layout/player2.xml
@@ -1,29 +1,73 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
 	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#a0a0a0" >
 
+<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
+	android:orientation="horizontal" android:layout_alignParentTop="true"
+	android:id="@+id/title_bar"
+>
+	<Button android:id="@+id/parent_button" android:text=".."
+	android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="12dp"
+	/>
+
+	<TextView android:id="@+id/list_title"
+	android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+	/>
+</LinearLayout>
+
 <FrameLayout
 	android:id="@+id/play_list_frame"
-     android:layout_width="fill_parent"
-     android:layout_height="wrap_content"
-     android:layout_below="@+id/controls">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/title_bar"
+>
 	<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:background="#ff5050a0"
 	 android:cacheColorHint="#ff5050a0" 
 	 android:layout_width="fill_parent" android:layout_height="fill_parent" />
 </FrameLayout>
 
-<FrameLayout 
-    android:layout_width="fill_parent" android:layout_height="wrap_content" 
-    android:background="#a0a0a0"
-    android:id="@+id/info_display"
-    android:layout_alignParentTop="true" >
-	<include layout="@layout/info_display" />
-</FrameLayout>
+<SlidingDrawer
+     android:id="@+id/drawer"
+     android:layout_width="fill_parent"
+     android:layout_height="wrap_content"
+     android:layout_below="@id/info_display"
+     android:bottomOffset="22dip"
+     android:topOffset="250dip"
 
-<FrameLayout
-    android:layout_width="wrap_content" android:layout_height="wrap_content" 
-    android:background="#a0a0a0"  android:layout_centerHorizontal="true"
-    android:id="@id/controls" android:layout_below="@id/info_display">
-	<include layout="@layout/controls" />
-</FrameLayout>
+     android:handle="@+id/handle"
+     android:content="@+id/panel">
+
+     <ImageView
+         android:id="@id/handle"
+         android:layout_width="88dip"
+         android:layout_height="44dip"
+         android:src="@drawable/remove" />
+
+	<LinearLayout
+		android:id="@id/panel"
+		android:orientation="vertical"
+		android:layout_width="fill_parent" android:layout_height="fill_parent"		
+	>
+		<FrameLayout 
+		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+		    android:background="#a0a0a0"
+		    android:id="@+id/info_display"
+		>
+			<include layout="@layout/info_display" />
+		</FrameLayout>
+		
+		<FrameLayout
+		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+		    android:background="#a0a0a0"  android:layout_gravity="center_horizontal"
+		    android:id="@+id/controls">
+			<include layout="@layout/controls" />
+		</FrameLayout>
+	</LinearLayout>
+
+</SlidingDrawer>
+
+
 
 </RelativeLayout>
