--- a/res/layout/player2.xml
+++ b/res/layout/player2.xml
@@ -12,9 +12,15 @@
 	/>
 
 	<TextView android:id="@+id/list_title"
-	android:layout_width="fill_parent"
+	android:text="[Current Location]"
+	android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 	/>
+	
+	<ImageButton android:id="@+id/search_button" android:src="@android:drawable/ic_menu_search"
+	android:layout_width="wrap_content" android:layout_height="wrap_content" />
+	
+	
 </LinearLayout>
 
 <FrameLayout
