--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -7,18 +7,20 @@
 >
 	<Button android:id="@+id/parent_button" android:text=".."
 	android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="12dp"
+    android:layout_height="54dp"
+    android:textSize="20dp"
 	/>
 
 	<TextView android:id="@+id/list_title"
 	android:text="[Current Location]"
 	android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:textSize="20dp"
+    android:textColor="#FFFFFFFF"
 	/>
 	
 	<ImageButton android:id="@+id/search_button" android:src="@android:drawable/ic_menu_search"
-	android:layout_width="wrap_content" android:layout_height="wrap_content" />
+	android:layout_width="54dp" android:layout_height="54dp" />
 	
 	
 </LinearLayout>
