--- a/res/menu/songmenu.xml
+++ b/res/menu/songmenu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/details"
-          android:title="Details" />
-    <item android:id="@+id/favorite"
-          android:title="Favourite" />
-    <item android:id="@+id/go_author"
-          android:title="Goto author" />
+	<item android:id="@+id/details" android:title="@string/details" />
+	<item android:id="@+id/favorite" android:title="@string/favorite" />
+	<item android:id="@+id/go_author" android:title="@string/go_to_author" />
+	<group android:id="@+id/in_playlist">
+		<item android:id="@+id/remove" android:title="@string/remove" />
+		<item android:id="@+id/remove_all" android:title="@string/remove_all" />
+	</group>
 </menu>
