--- a/res/menu/songmenu.xml
+++ b/res/menu/songmenu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/details" android:title="@string/details" />
+	<!--  item android:id="@+id/details" android:title="@string/details" / -->
 	<item android:id="@+id/favorite" android:title="@string/favorite" />
 	<item android:id="@+id/go_author" android:title="@string/go_to_author" />
 	<group android:id="@+id/in_playlist">
