--- a/res/layout-land/controls.xml
+++ b/res/layout-land/controls.xml
@@ -1,11 +1,11 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent" >
 <TableRow>
-<ImageButton android:id="@+id/play_button" android:background="@drawable/mg_forward" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/stop_button" android:background="@drawable/mg_stop" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
+<ImageButton android:id="@+id/play_button" android:background="@drawable/play_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
+<ImageButton android:id="@+id/stop_button" android:background="@drawable/stop_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
 </TableRow>
 <TableRow>
-<ImageButton android:id="@+id/back_button" android:background="@drawable/mg_back2" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
-<ImageButton android:id="@+id/fwd_button" android:background="@drawable/mg_forward2" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
+<ImageButton android:id="@+id/back_button" android:background="@drawable/back_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
+<ImageButton android:id="@+id/fwd_button" android:background="@drawable/fwd_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
 </TableRow>
 </TableLayout>
