--- a/res/layout/songlist_item.xml
+++ b/res/layout/songlist_item.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#FFFFFF" android:textSize="22dp"/>
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#FFFFFF" android:textSize="15dp"/>
-</LinearLayout>
+<ImageView android:src="@drawable/note" 
+	android:layout_width="36dp" android:layout_height="36dp"
+	android:id="@+id/icon"
+	android:layout_alignParentLeft="true"
+	android:layout_centerVertical="true"
+/>
+
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+	android:layout_alignParentTop="true"
+	android:layout_toRightOf="@id/icon"
+	android:id="@+id/title"
+	android:textColor="#FFFFFF" android:textSize="22dp"
+	android:text="SongName"
+/>
+<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+	android:layout_toRightOf="@id/icon"
+	android:layout_below="@id/title"
+	android:textColor="#FFFFFF" android:textSize="15dp"
+	android:text="Author"
+/>
+
+
+</RelativeLayout>
