--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -1,5 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
-    android:layout_width="fill_parent" android:layout_height="fill_parent" >
+    android:layout_width="wrap_content" android:layout_height="fill_parent"
+    android:layout_gravity="center_horizontal"
+    >
 <ImageButton android:id="@+id/back_button" android:background="@drawable/back_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
 <ImageButton android:id="@+id/play_button" android:background="@drawable/play_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
 <ImageButton android:id="@+id/stop_button" android:background="@drawable/stop_button" android:layout_width="58dp" android:layout_height="58dp" android:scaleType="fitCenter" />
