--- a/res/menu/songmenu.xml
+++ b/res/menu/songmenu.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<!--  item android:id="@+id/details" android:title="@string/details" / -->
-	<item android:id="@+id/favorite" android:title="@string/favorite" />
+	<group android:id="@+id/not_in_playlist">
+		<item android:id="@+id/favorite" android:title="@string/favorite" />
+		<item android:id="@+id/add_to_plist" android:title="@string/add_to_plist" />
+		<item android:id="@+id/create_playlist" android:title="@string/create_playlist" />
+	</group>
 	<item android:id="@+id/go_author" android:title="@string/go_to_author" />
 	<group android:id="@+id/in_playlist">
+		<item android:id="@+id/set_plist" android:title="@string/set_plist" />
 		<item android:id="@+id/remove" android:title="@string/remove" />
 		<item android:id="@+id/remove_all" android:title="@string/remove_all" />
 	</group>
