--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -1,91 +1,44 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
 
-<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
-	android:orientation="horizontal" android:layout_alignParentTop="true"
-	android:background="#000080"
-	android:id="@+id/title_bar"
->
-	<!-- Button android:id="@+id/parent_button" android:text=".."
-	android:layout_width="wrap_content"
-    android:layout_height="54dp"
-    android:textSize="20dp"
-    android:textColor="#FFFFFFFF"
-    android:layout_margin="4dp"
-    android:singleLine="true"
-	/ -->
-
-	<TextView android:id="@+id/list_title"
-	android:text="[Current Location]"
-	android:layout_width="100dp"
-    android:layout_height="54dp"
-    android:textSize="20dp"
-    android:textColor="#FFFFFFFF"
-    android:layout_margin="4dp"
-    android:layout_weight="1.0"
-    android:singleLine="true"
-	/>
-	
-	<ImageButton android:id="@+id/search_button" android:src="@android:drawable/ic_menu_search"
-	android:layout_width="54dp" android:layout_height="54dp" android:layout_margin="4dp" />
-	
-	
-</LinearLayout>
-
-<FrameLayout
-	android:id="@+id/play_list_frame"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/flipper"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@id/title_bar"
->
-	<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:background="#ff000000"
-	 android:cacheColorHint="#ff000000"  android:fastScrollEnabled="true"
-	 itemColor="#ffffffff" subitemColor="#ffa0a0ff" dirColor="#ffffffa0" archiveColor="#ffffffa0"
-	 android:layout_width="fill_parent" android:layout_height="fill_parent" />
-</FrameLayout>
+    android:inAnimation="@anim/in_from_right"
+    android:outAnimation="@anim/out_to_left"
+    android:layout_below="@id/title_bar">
 
-<SlidingDrawer
-     android:id="@+id/drawer"
-     android:layout_width="fill_parent"
-     android:layout_height="240dp"
-     android:orientation="vertical"
-
-     android:layout_alignParentBottom="true"
-
-     android:handle="@+id/handle"
-     android:content="@+id/panel">
-
-     <ImageView
-         android:id="@id/handle"
-         android:layout_width="88dip"
-         android:layout_height="30dip"
-         android:scaleType="fitXY"
-         android:src="@drawable/scroll_button" />
-
-	<LinearLayout
-		android:id="@id/panel"
-		android:orientation="vertical"
-		android:layout_width="fill_parent"
-		android:layout_height="400dp"
-		android:background="#ff232729"	
-	>
-		<FrameLayout 
-		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
-		    android:id="@+id/info_display"
-		>
-			<include layout="@layout/info_display" />
-		</FrameLayout>
-		
+	<LinearLayout  android:orientation="vertical"
+		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
+	
+		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:orientation="horizontal" android:layout_alignParentTop="true"
+			android:background="#000080"
+			android:id="@+id/title_bar" >
+			<TextView android:id="@+id/list_title"
+				android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:textSize="20dp"
+			    android:textColor="#FFFFFFFF"
+			    android:layout_margin="4dp"
+			    android:layout_weight="1.0"
+			    android:singleLine="true" />
+			
+			<ImageButton android:id="@+id/go_info_button" android:src="@drawable/gflat_info"
+				 android:scaleType="fitCenter" style="@style/Button" />
+			
+		</LinearLayout>
+	
 		<FrameLayout
-		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
-		    android:layout_gravity="center_horizontal"
-		    android:id="@+id/controls">
-			<include layout="@layout/controls" />
+			android:id="@+id/play_list_frame"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent" >
+			<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:background="#ff000000"
+				android:cacheColorHint="#ff000000"  android:fastScrollEnabled="true"
+				itemColor="#ffffffff" subitemColor="#ffa0a0ff" dirColor="#ffffffa0" archiveColor="#ffffffa0"
+				android:layout_width="fill_parent" android:layout_height="fill_parent" />
 		</FrameLayout>
 	</LinearLayout>
+		
+	<include layout="@layout/info" />
 
-</SlidingDrawer>
-
-
-
-</RelativeLayout>
+</ViewFlipper>
