--- a/res/menu/optionsmenu.xml
+++ b/res/menu/optionsmenu.xml
@@ -7,6 +7,8 @@
     <item android:id="@+id/abort_scan" android:title="@string/abort_scan" android:icon="@drawable/ic_menu_music_library"/>
 </group>
 <item android:id="@+id/new_" android:title="@string/new_" android:icon="@android:drawable/ic_menu_add"/>
+<item android:id="@+id/search" android:title="@android:string/search_go" android:icon="@android:drawable/ic_menu_search"/>
+
 <item android:id="@+id/about" android:title="@string/about" android:icon="@android:drawable/ic_menu_info_details"/>
 <item android:id="@+id/quit" android:title="@string/quit" android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
 </menu>
