--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -1,24 +1,17 @@
 <LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android" 
 	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
-	
-	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:orientation="horizontal" android:layout_alignParentTop="true"
-		android:background="#000080"
-		android:id="@+id/title_bar" >
-		<FrameLayout
-		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
-		    android:layout_weight="1.0"
-		    android:id="@+id/controls">
-			<include layout="@layout/controls" />
-		</FrameLayout>
-
-		<ImageButton android:id="@+id/go_list_button" android:src="@drawable/gflat_list"
-			android:scaleType="fitCenter" style="@style/Button" />
-		
-	</LinearLayout>		
-		<FrameLayout 
-		    android:layout_width="fill_parent" android:layout_height="wrap_content" 
-		    android:id="@+id/info_display" >
-			<include layout="@layout/info_display" />
-		</FrameLayout>
+	<FrameLayout 
+	    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+	    android:id="@+id/info_display" >
+	    android:layout_weight="0.0"
+		<include layout="@layout/info_display" />
+	</FrameLayout>
+	<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:layout_weight="1.0" />
+	<FrameLayout
+	    android:layout_width="fill_parent" android:layout_height="wrap_content" 
+	    android:layout_weight="0.0"
+	    android:id="@+id/controls">
+		<include layout="@layout/controls" />
+	</FrameLayout>
 </LinearLayout>
